# selfopticon

./: .gitignore  Dockerfile  README.md  dagger.json  pyproject.toml
.dagger/: pyproject.toml
.dagger/src/monorepo_dagger/: main.py
projects/spotify-watcher/: README.md  __init__.py  main.py  pyproject.toml
projects/spotify_watcher/: README.md  pyproject.toml
projects/spotify_watcher/src/spotify_watcher/: __init__.py  database.py  main.py
spotify-watcher/: README.md  __init__.py  auth.py  hello.py  main.py  pyproject.toml  spotify_api.py
