[project]
name = "spotify-watcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Graham Doerksen", email = "46031209+gdoerksen@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
]

# [project.scripts]
# spotify-watcher = "spotify-watcher:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"